--- a/styles/style.css
+++ b/styles/style.css
@@ -21,9 +21,7 @@ body {
 .list{
   list-style: none;
 }
-.section{
 
-}
 .link {
   text-decoration: none;
 }
@@ -49,9 +47,7 @@ body {
 
 
 /* header */
-.header {
 
-}
 .logo-part-black {
   color: #000000;
 }
@@ -74,7 +70,6 @@ body {
 
 
 /* main-index.html */
-
 /* hero-section */
 .hero {
   background-color: #2F303A;
@@ -94,6 +89,7 @@ body {
   border: hidden;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+  cursor: pointer;
 }
 .hero-btn:active{
   background-color: #188CE8;
@@ -164,4 +160,39 @@ body {
 .contacts-footer:hover,
 .contacts-footer:focus{
   color: var(--accent-color);
+}
+
+/* main portfolio.html */
+.filter{
+  background-color: #F5F4FA;
+  border: hidden;
+  border-radius: 4px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  letter-spacing: 0.03em;
+  color: var(--main-color);
+}
+.filter:hover, 
+.filter:focus{
+  color: #ffffff;
+  background-color: var(--accent-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+.example-title{
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: var(--main-color);
+}
+.example-type{
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.03em;
+  color: var(--second-color);
+}
+.example{
+  border: 1px solid #EEEEEE
 }
