--- a/styles/style.css
+++ b/styles/style.css
@@ -11,9 +11,8 @@ body {
   background-color: var(--main-bcg-color);
   color: var(--main-color);
   font-style: normal;
-  font-family: Roboto, sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 14px;
-  line-height: 1.17;
 }
 
 
@@ -54,6 +53,7 @@ body {
 .navigation {
   color: #212121;
   font-weight: 500;
+  line-height: 1.14;
 }
 .navigation:hover,
 .navigation:focus{
@@ -62,6 +62,7 @@ body {
 .contacts-header {
   color: var(--second-color);
   font-weight: 500;
+  line-height: 1.14;
 }
 .contacts-header:hover,
 .contacts-header:focus {
@@ -90,6 +91,11 @@ body {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   cursor: pointer;
+  font-family: 'Roboto';
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
 }
 .hero-btn:active{
   background-color: #188CE8;
@@ -97,12 +103,11 @@ body {
 
 /* properties-section */
 .properties-title {
-  font-weight: 700;
+  line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
 }
 .properties-text {
-  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -128,7 +133,6 @@ body {
   color: var(--main-color);
 }
 .team-position {
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.18;
   letter-spacing: 0.03em;
@@ -146,12 +150,12 @@ body {
   font-style: normal;
 }
 .google-adress{
-  font-weight: 400;
+  line-height: 1.71;
   letter-spacing: 0.03em;
   color: #FFFFFF;
 }
 .contacts-footer{
-  font-weight: 400;
+  line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
@@ -167,6 +171,7 @@ body {
   background-color: #F5F4FA;
   border: hidden;
   border-radius: 4px;
+  font-family: 'Roboto', sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
@@ -180,14 +185,12 @@ body {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .example-title{
-  font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--main-color);
 }
 .example-type{
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.03em;
