--- a/styles/style.css
+++ b/styles/style.css
@@ -97,7 +97,8 @@ body {
   line-height: 1.87;
   letter-spacing: 0.06em;
 }
-.hero-btn:active{
+.hero-btn:hover,
+.hero-btn:focus{
   background-color: #188CE8;
 }
 
